cursor pointer made trash clickable

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 class="form-control" 
                 placeholder="Any pendig tasks?"
                 v-model= "newTodoName"
-                v-on:keyup.enter="submit" 
+                v-on:keyup.enter="addTodo" 
                 />
             <div class="input-group-append">
                 <button class="btn btn-outline-secondary" 
